# changa

./: ._HilbertLB.C  ._HilbertLB.h  ._MapStructures.h  .clang-format  .emacs  .gitignore  .travis.yml  Angles.cpp  Bucket.C  Bucket.h  CHANGES  CHECKPOINTING  CUDAMoments.cu  CUDAMoments.h  CacheInterface.C  CacheInterface.cpp  CacheInterface.h  ChangeLog  CommMeasureLB.C  CommMeasureLB.ci  CommMeasureLB.h  Compute.C  Compute.cpp  Compute.h  CudaFunctions.h  DataManager.cpp  DataManager.h  DebugProbe.cpp  DebugProbe.h  Doxyfile  DumpFrameData.h  DustOpacity.cpp  DustOpacity.h  Ewald.C  Ewald.cpp  EwaldCUDA.h  FastMultipole.C  FastMultipole.h  FixedBC.cpp  FixedBC.h  (+241 more)
.github/workflows/: changa-smp.yml  changa.yml  manga.yml
GenericTree/: GenericTreeNode.C  GenericTreeNode.h  GravityTreeNode.h  Makefile  MultipoleMoments.h  sample.cpp
OLD/: ScaleTranMapBG.C  ScaleTranMapBG.h  ScaledORBMapBG.cpp  ScaledORBMapBG.h  clustering.cpp
ParallelSmooth/: DataManager.cpp  DataManager.h  Makefile  NChilada.ci  NChilada.cpp  NChilada.decl.h  NChilada.def.h  NChilada.h  ParallelSmooth.ci  ParallelSmooth.cpp  ParallelSmooth.decl.h  ParallelSmooth.def.h  ParallelSmooth.doxygen  ParallelSmooth.h  Particle.h  Reductions.ci  Reductions.cpp  Reductions.h  RequestResponse.cpp  RequestResponse.h  SFC.cpp  SFC.h  SPH_Requests.cpp  SPH_Requests.h  Smooth_TreePiece.cpp  Smooth_TreePiece.h  Sorter.cpp  Sorter.h  Tree.h  TreePiece.cpp  TreePiece.h
array/: README  absarr  absarr.c  addarr  addarr.c  divarr  divarr.c  gtarr  gtarr.c  magvec  magvec.c  maxarr  maxarr.c  meanarr  meanarr.c  minarr  minarr.c  rmsarr  rmsarr.c  scalarr  scalarr.c  snap2arr.c  sortvec  sortvec.c  subarr  subarr.c  sumarr  sumarr.c  vecpackunpk  vecpackunpk.c
changa/: CHANGES  CHECKPOINTING  CacheInterface.C  CacheInterface.h  CacheManager.C  CacheManager.ci  CacheManager.h  ChangeLog  Compute.C  Compute.h  CudaFunctions.h  DataManager.cpp  DataManager.h  Ewald.C  EwaldCUDA.cu  EwaldCUDA.h  FastMultipole.C  GenericTreeNode.h  GravityParticle.h  HostCUDA.cu  HostCUDA.h  InOutput.C  InOutput.h  Makefile  Makefile.dep  Makefile.in  MetisCosmoLB.C  MetisCosmoLB.ci  MetisCosmoLB.h  MultipoleMoments.h  MultistepLB.C  Opt.h  ParallelGravity.ci  ParallelGravity.cpp  ParallelGravity.h  Particle.h  README  Reductions.cpp  Reductions.h  SSEdefs.h  (+35 more)
changa/movie/: director.README  run581.director  run581.param
changa/testcollapse/: Makefile  README  adiabtophat_glass_28768_Std.param  compare.py  gas.prof
changa/testcosmo/: README  clean.sh  cube300.param  idl.mf.batch  rdfloat.pro  run.sh
changa/testdata/: Makefile  README  pgaspart.c  testdata.param  tipsydefs.h
changa/testshock/: Makefile  pres_gasoline.out  pressplot.c  shocktube.param
changa/teststep/: Makefile  README  runtest.sh  test_pg.param  test_pkd.param
cuda/intrinsics/: shfl.hu  voting.hu
data/: HM2011.UV  README  colortables.txt  g1536.director  g1536.director2  g1536.director3  g1536.director4  g1536.director5  g1536.director6  g1536.director7  g1536.director8  g1536.director9  lwtable.txt  mri.director
density/: README  density.param  lambs.00200_subsamp_30K  smooth.sh  testchanga.sh  testpkd.sh
forces/: README  lambs.00200_subsamp_30K
forces/np/: CAM_result.o699180  CAM_result.o700639  CAM_result.o700649  CAM_result.o700652  CAM_result.o702420  CAM_result.o702421  DIAG  README  charmrun.18576  charmrun.18975  charmrun.24203  charmrun.28723  charmrun.41626  charmrun.42043  charmrun.894  diff.acc  direct.acc  direct.pot  forces_e0.direct.sh  lambs_30K.param  lambs_30K.pgrav.param  mag.acc  magdiff.arr  rdiff.acc  run_prof.sh  test4np.direct.acc  tstforce_ChaNGa.sh  tstforce_PGrav_30K.sh  tstforce_gasoline06_30K.sh  tstforce_gasoline_30K.sh  tstforce_pkdgrav06_30K.sh  tstforce_pkdgrav2_30K.sh
forces/periodic/: README  direct.acc  direct.pot  forces_e0.direct.sh  lambs_30K.param  lambs_30K.pgrav.param  test4.direct.acc  tstforce_ChaNGa.sh  tstforce_PGrav_30K.sh  tstforce_gasoline06_30K.sh  tstforce_gasoline_30K.sh
mftest/: README  cube300_pgrav.param  mf.sh  mf2.pro  mf_pgrav.sh  ps.ps
movie/: README.newdumpframe  director.README  run581.20000  run581.param  run581.photogenic
mslb/: counts.sh  process_predictions.awk
onestar/: README  clean.sh  idl.imf.batch  idl.metals.batch  metalcheck.pro  metalcheck.sh  numlines.pro  onestar.param  snia_K.pro  snia_K01.pro
test_cooling/: Makefile  disk.ic  test_adiabatic.param  test_boley.param  test_cosmo.param  test_h2.param  test_metal.param  uniform_box.ic
testcollapse/: Makefile  README  collapse.param  compare.py  gas.prof  prof.py  tipsy.mac
testcollbox/: README  genIC.py  runtest.sh  test_collbox.param  test_mb.py  uniform_box.ic
testcollision/: 2particles.param
testcosmo/: README  clean.sh  cube300.000128  cube300.000128.den  cube300.param  cube300.tbin  cube300.timings  mf.sh  mf2.pro  mf2.py  rdfloat.pro  run.sh  runscript
testdamping/: README  analyzedamping.py  clean.sh  sphere.param  sphere.std
testdata/: Makefile  README  pgaspartnc.C  ppartnc.C  ppartnc.cpp  ppartt  ppartt.c  testdata.param
testndsph/: README  acctest  analyzeAcc.py  analyzeDensity.py  cleanup  densitytest
testonestar/: Makefile  README  dummy.pro  ejecta_K.pro  ejecta_K01.pro  ejecta_MS.pro  energy.awk  findmaxmass.pro  idl.metals.batch  imf.pro  metalcheck.pro  metalcheck.sh  onestar.param  onestar.tbin  plotimf.py  plotsn.py  radenergy.pro  read_ascii_array.pro  rtipsy.pro  run.sh  snia_K.pro  snia_K01.pro  snia_MS.pro  snii_fe_K.pro  snii_fe_K01.pro  snii_fe_MS.pro  snii_felin_K.pro  snii_linfe_ms.pro  snii_ox_K.pro  snii_ox_K01.pro  snii_ox_MS.pro  snii_oxlin_K.pro  snii_oxlin_K01.pro  sntots.pro  testimf.ci  testsnia.ci  wind_ejecta_K.pro  wind_ejecta_K01.pro  wind_ejecta_k.pro
testshock/: Makefile  README  shocktube.param  shocktube.std
teststep/: Makefile  pgtest_ms.000010  pgtest_ms.000010.den  pgtest_ms.timings  runtest.sh  test_pg.param
threadsafe_hashtable/: hashtable_mt.h
unit_tests/: driver.cpp  formatted_string.cpp  tests.mk
utilities/: fix_starlog_header.py  readstarlog.py
(+117 files in other folders)
